# hurricane-template

./: AGENTS.md  Cargo.toml  README.md  build.rs  hurricane-template.code-workspace
.cargo/: config.toml
.zed/: settings.json
src/: autonomous.rs  chassis.rs  control.rs  driver_control.rs  main.rs  mcl.rs  motion_controller.rs  motion_profile.rs  odometry.rs  pid.rs  plan.rs  triggers.rs
src/routines/: bottom.routine  bottom_save  gurt.routine  mod.rs  sawp.routine  skills.routine  skills_old  test.routine  top.routine  top_ct
src/ui/: auton_selector.slint  ui.slint
src/utils/: mod.rs  path.rs  units.rs
