[package]
name = "Hurricanes"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# These fields configure default behavior for uploads with `cargo v5`.
[package.metadata.v5]
upload-strategy = "differential"
slot = 1
icon = "planets"
compress = true

[dependencies]
slint = { version = "1.13.0", std = false, default-features = false, features = ["compat-1-2", "libm", "renderer-software", "unsafe-single-threaded"] }
vexide = "0.7.0"
vexide-slint = "0.1.0"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }

[build-dependencies]
slint-build = "1.13.0"
postcard = { version = "1.1.3", default-features = false, features = ["alloc"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1